--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -20,10 +20,11 @@
         android:id="@+id/button_go_room_sell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="139dp"
         android:text="방 내놓기"
+        app:layout_constraintLeft_toRightOf="@+id/button_go_room_board"
+        android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:id="@+id/textView2"
