--- a/app/src/main/res/layout/activity_room_register.xml
+++ b/app/src/main/res/layout/activity_room_register.xml
@@ -58,7 +58,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="평수 *필수"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             app:layout_constraintTop_toBottomOf="@+id/editText13"
             tools:layout_editor_absoluteX="16dp" />
 
