--- a/app/src/main/res/layout/activity_room_board.xml
+++ b/app/src/main/res/layout/activity_room_board.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.untaek.oneroom.act.RoomBoardActivity">
+    tools:context="com.untaek.oneroom.act.RoomPostDetailActivity">
 
 </android.support.constraint.ConstraintLayout>
