--- a/app/src/main/res/layout/list_post.xml
+++ b/app/src/main/res/layout/list_post.xml
@@ -5,46 +5,42 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView_list_content_address"
+        android:id="@+id/textView_post_content_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="18sp" />
+        android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView_list_content_posted"
+        android:id="@+id/textView_post_content_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="TextView" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView_list_content_building_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/textView_list_content_floor"
-            android:layout_width="match_parent"
+            android:id="@+id/textView_post_content_contract_type"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView_list_content_size"
-            android:layout_width="match_parent"
+            android:id="@+id/textView_post_content_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/textView_post_content_cost"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView" />
 
     </LinearLayout>
-
 </LinearLayout>
