--- a/app/src/main/res/layout/activity_room_post_detail.xml
+++ b/app/src/main/res/layout/activity_room_post_detail.xml
@@ -7,15 +7,16 @@
     tools:context="com.untaek.oneroom.act.RoomPostDetailActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
+        android:text="title"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -26,28 +27,60 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView_title"
         app:layout_constraintHorizontal_bias="0.0"
-        android:id="@+id/linearLayout3">
+        android:id="@+id/linearLayout3"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textView_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="type"
-            tools:layout_editor_absoluteX="-328dp"
-            tools:layout_editor_absoluteY="341dp" />
+            android:text="address" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/textView_size"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="size"
-            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="80dp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="type"
+                tools:layout_editor_absoluteX="-328dp"
+                tools:layout_editor_absoluteY="341dp" />
+
+            <TextView
+                android:id="@+id/textView_cost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="cost"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_title" />
+
+            <TextView
+                android:id="@+id/textView_cost_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="cost_add"
+                tools:layout_editor_absoluteX="59dp"
+                tools:layout_editor_absoluteY="62dp" />
+
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/textView_admin_ex"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="admin_ex"
@@ -55,15 +88,15 @@
             tools:layout_editor_absoluteY="62dp" />
 
         <TextView
-            android:id="@+id/textView19"
+            android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="option"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="144dp" />
+            android:layout_margin="8dp"
+            android:text="-- 추가 정보 --"
+            android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/textView_infra"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="infra"
@@ -71,36 +104,29 @@
             tools:layout_editor_absoluteY="112dp" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/textView_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="cost_add"
-            tools:layout_editor_absoluteX="59dp"
-            tools:layout_editor_absoluteY="62dp" />
+            android:text="option"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="144dp" />
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/textView_parking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="parking"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="126dp" />
+
+        <TextView
+            android:id="@+id/textView_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="description"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="164dp" />
 
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="cost"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="parking"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="126dp" />
     </LinearLayout>
 
     <fragment
@@ -119,12 +145,23 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="임대인 연락처"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/fragment2" />
+
+    <TextView
+        android:id="@+id/textView_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="phone"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView12"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/fragment2" />
 </android.support.constraint.ConstraintLayout>
